# awsconnect

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
src/: cli.rs  main.rs  task.rs
