[package]
name = "awsconnect"
version = "0.1.0"
edition = "2021"

authors = ["Arran France <arran@arranfrance.com>"]
description = "A simple command line tool for accessing AWS instances via AWS Vault"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0.14", features = ["derive", "env"] }
dotenv-parser = "0.1.3"
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.51"
aws-config = "0.6.0"
aws-types = "0.6.0"
rusoto_ecs = "0.47.0"
rusoto_core = "0.47.0"
dialoguer = "0.9"
subprocess = "0.2.8"
strum = { version = "0.23", features = ["derive"] }